# max-flow-min-cut

./: .gitignore  CMakeLists.txt  IDENTIFICATION.txt  README.md  README.txt  demo  graph.hpp  main.cpp  presentation.url
app/: main.cpp  test_graph.cpp  test_maxmin.cpp
include/: graph.hpp  maxflow_mincut.hpp
inputs/: graph_1.txt  graph_1_src1sink5.txt  graph_2.txt  graph_3.txt  graph_4.txt  graph_doubles.txt
